# JPO-Kalkulator

./: .gitmodules  CMakeLists.txt  CMakeUserPresets.json  Projekt_Kalkulator dla elektroników_Autor_Marchewczyk_Jakub.docx  README.md
inc/: calculator.h  mainwindow.h  mainwindow.ui
src/: calculator.cpp  main.cpp  mainwindow.cpp
tests/: calculator_tests.cpp
